--- a/sec/preliminary.tex
+++ b/sec/preliminary.tex
@@ -19,6 +19,8 @@ In the \href{https://github.com/thesfinox/ml-sft-trunc}{GitHub repository} the a
 
   \item the \href{https://github.com/thesfinox/ml-sft-trunc/tree/metrics_eval}{metrics\_eval} branch contains a preliminary study on the best metric to use for the analysis,
 
+  \item the \href{https://github.com/thesfinox/ml-sft-trunc/tree/model-dep}{model-dep} branch hosts the model dependent analysis with different subsamples of the datasets and more complex neural network architectures,
+
   \item the \href{https://github.com/thesfinox/ml-sft-trunc/tree/report}{report} branch contains this report,
 
   \item the \href{https://github.com/thesfinox/ml-sft-trunc/tree/old}{old} branch holds the outdated version of the analysis.
