Some adjustments to the network
Signed-off-by: Riccardo Finotello <riccardo.finotello@gmail.com>

--- a/minimal-models_ml.ipynb
+++ b/minimal-models_ml.ipynb
@@ -45,6 +45,8 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "\n",
     "import os\n",
     "import pandas as pd\n",
