--- a/minimal-models_tidy.ipynb
+++ b/minimal-models_tidy.ipynb
@@ -48,6 +48,9 @@
    },
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re"
