--- a/stacking.ipynb
+++ b/stacking.ipynb
@@ -1800,9 +1800,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml-sft-trunc",
    "language": "python",
-   "name": "python3"
+   "name": "ml-sft-trunc"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1814,7 +1814,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
