--- a/sft-trunc_ml.ipynb
+++ b/sft-trunc_ml.ipynb
@@ -4805,9 +4805,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml-sft-trunc",
    "language": "python",
-   "name": "python3"
+   "name": "ml-sft-trunc"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4819,7 +4819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
