--- a/minimal-models_eda.ipynb
+++ b/minimal-models_eda.ipynb
@@ -4823,9 +4823,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml-sft-trunc",
    "language": "python",
-   "name": "python3"
+   "name": "ml-sft-trunc"
   },
   "language_info": {
    "codemirror_mode": {
