--- a/minimal-models_ml.ipynb
+++ b/minimal-models_ml.ipynb
@@ -1769,9 +1769,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml-sft-trunc",
    "language": "python",
-   "name": "python3"
+   "name": "ml-sft-trunc"
   },
   "language_info": {
    "codemirror_mode": {
